# ats-ai

./: .env.example  .gitignore  AGENTS.md  ATS PRD pplx mvp.md  ATS PRD pplx.md  README.md  agent-ats-ai.md  ats-ai.md  ats-dashboard-mockup.html  deepseek-ats-ai.md  docker-compose.yml  notes.md
.github/workflows/: deploy-pages.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/auth/: dependencies.py  jwt.py  password.py
backend/app/middleware/: error_handler.py  pagination.py  rate_limit.py  request_id.py  tenant.py
backend/app/models/: __init__.py  audit_log.py  blacklist.py  candidate.py  candidate_document.py  candidate_skill.py  candidate_timeline.py  client_contact.py  organization.py  platform_user.py  user.py
backend/app/routes/: auth.py  candidates.py  client_contacts.py  organizations.py  users.py
backend/app/schemas/: auth.py  candidate.py  client_contact.py  common.py  organization.py  user.py
backend/app/services/: candidate.py  candidate_status.py
backend/db/: alembic.ini  env.py
backend/db/versions/: 001_initial_schema.py  002_rls_policies.py  003_org_user_models.py  004_candidate_models.py
backend/scripts/: bootstrap.py  setup_rls.py
backend/tests/: conftest.py  test_auth.py  test_candidates.py  test_db.py  test_main.py  test_middleware.py  test_models.py  test_org_user_management.py
docs/: agent-portal.html  dashboard.html  demo-candidates.html  demo-jobs.html  demo-showcase.html  ds-index.html
prd-archived/: cgpt-deep-research-report.md  gemini-AI_Native_Agency_ATS_PRD.md
(+13 files in other folders)
